src/styles/default/_button-dropdown.scss
.button-dropdown {
    .button-svg {
        position: relative;
        top: 1px;
        stroke: #{$primary-blue-03};
    }

    .dropdown-modal-item {
        :deep(.icon-with-link) {
            .icon-with-link-container {
                gap: var(--space-s);
                padding: 5px 0 3px 5px;
            }
        }

        :deep(.icon-with-link.not-smart-link) .text,
        :deep(.icon-with-link) .text {
            align-self: baseline;
        }

        :deep(.icon-with-link) .text {
            font-family: "Karbon", Helvetica, Arial, sans-serif;
            font-weight: 500;
            color: $medium-grey;
        }

        :deep(.icon-with-link) .link,
        :deep(.icon-with-link.not-smart-link) .text {
            text-decoration: underline;
            text-decoration-thickness: 3px;
            text-underline-offset: 6px;
            -webkit-text-decoration-color: $grey-blue;
                    text-decoration-color: $grey-blue;
        }

        :deep(.icon-with-link.not-smart-link) {
            width: unset;
        }

        :deep(.icon-with-link.is-link-copied) {
            .text {
                position: relative;
                top: 3px;
            }
        }
    }

    @media #{$has-hover} {
        :deep(.icon-with-link) .link:hover,
        :deep(.icon-with-link.not-smart-link):hover .text {
            -webkit-text-decoration-color: #{$bright-blue};
                    text-decoration-color: #{$bright-blue};
        }

        :deep(.icon-with-link) {
            .link:hover {
                text-decoration-thickness: 3px;
                text-underline-offset: 6px;
            }
        }

        :deep(.icon-with-link.not-smart-link):hover {
            .text,
            .icon {
                cursor: pointer;
            }
        }
    }

    @media #{$small} {
        :deep(.mobile-button) {
            display: block;
            width: 36px;
            height: 36px;
            min-width: 0;
        }

        .button-svg {
            left: -2px;
            top: 2px;
        }

        .button-text,
        .toggle-triangle-icon {
            display: none;
        }

        :deep(.icon-with-link.is-link-copied) {
            width: 85%;
            background-color: $page-blue;
            .text {
                top: 3px;
            }
        }

        .dropdown-modal-item {
            :deep(.icon-with-link):active {
                background-color: #faf5f4;
                width: 85%;
            }
        }
    }

    // Overwrites for Add-to-Calendar-Button CSS

    add-to-calendar-button::part(atcb-button) {
        box-sizing: border-box;
        justify-content: flex-start;
        width: 282px;
        height: 51px;
        padding: 0;
        font-family: inherit;
        font-size: 18px;
        font-weight: 500;
        line-height: inherit;
        padding: 12px 16px 12px 20px;
        margin: unset;
        border-radius: 8px;
        border: 1px solid #{$primary-blue-03};
        background-color: $white;
        color: #{$primary-blue-03};
        box-shadow: unset;
        z-index: 0;
    }

    add-to-calendar-button::part(atcb-button):hover {
        margin: unset;
        background-color: #f1f1f1;
    }

    add-to-calendar-button::part(atcb-button):focus {
        outline: 4px auto -webkit-focus-ring-color;
    }

    add-to-calendar-button::part(atcb-button-text)::after {
        position: relative;
        display: inline-block;
        left: 116px;
        top: -1px;
        content: url("ucla-library-design-tokens/assets/svgs/icon-ftva-drop-triangle.svg");
    }

    add-to-calendar-button::part(atcb-list-wrapper) {
        background: $white;
        width: 274px;
        min-width: 0;
        min-height: auto;
        padding: 20px 20px 24px 20px;
        margin: 0 4px;
        border-width: 0 1px 1px 1px;
        border-style: solid;
        border-color: #{$primary-blue-03};
        border-bottom-left-radius: 8px;
        border-bottom-right-radius: 8px;
        position: absolute;
        top: unset;
        left: unset;
    }

    add-to-calendar-button::part(atcb-list) {
        display: flex;
        flex-direction: column;
        row-gap: 16px;
        box-shadow: unset;
        background-color: transparent;
    }

    add-to-calendar-button::part(atcb-list-item) {
        box-shadow: unset;
        background-color: transparent;
        padding: 0;
        font-family: "Karbon", Helvetica, Arial, sans-serif;
        font-weight: 500;
        font-size: 18px; 
        line-height: inherit;
        color: $medium-grey;
        text-decoration: underline;
        text-decoration-thickness: 3px;
        text-underline-offset: 6px;
        -webkit-text-decoration-color: $grey-blue;
                text-decoration-color: $grey-blue;
    }

    add-to-calendar-button::part(atcb-list-item):hover {
        -webkit-text-decoration-color: #{$bright-blue};
                text-decoration-color: #{$bright-blue};
    }
}

